src/main/kustomize/integration/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    certmanager.k8s.io/cluster-issuer: cscope-ci-certificate-authority
spec:
  rules:
  - host: plessme-develop.bongladesch.com
    http:
      paths:
      - path: /users
        backend:
          serviceName: backend-svc
          servicePort: 8080
  tls:
  - hosts:
    - plessme-develop.bongladesch.com
    secretName: plessme-develop-bongladesch-com-tls-secret
